# filadaminha

./: README.md  dev.sh  pyproject.toml  ruff.toml
.devcontainer/: README.md  devcontainer-alpine.json  devcontainer.json  podman.conf  setup-alpine.sh  setup.sh  test-devcontainer.sh  test-setup.sh
src/queueserver/: .env  config.py  models.py  routes.py  server.py  utils.py
